tests/rosetta/out/C/address-of-a-variable.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:37Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:37Z
#include <stdio.h>
#include <stdlib.h>

static double myVar = 3.14;

int _mochi_main() {
  printf("value as float: %.17g\n", myVar.0);
  printf("address: <not available>\n");
  return 0;
}
int main() { return _mochi_main(); }
